prevent wrapping between checkbox & label

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -15,3 +15,4 @@ tt, pre {
 	font-size: 10pt;
 }
 
+.item { white-space: nowrap; display: inline;  }
